--- a/package.json
+++ b/package.json
@@ -14,18 +14,22 @@
     "@kinde-oss/kinde-auth-nextjs": "^2.4.6",
     "@radix-ui/react-alert-dialog": "^1.1.5",
     "@radix-ui/react-dialog": "^1.1.5",
+    "@radix-ui/react-popover": "^1.1.5",
     "@radix-ui/react-slot": "^1.1.1",
     "ag-grid-community": "^33.0.4",
     "ag-grid-react": "^33.0.4",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "drizzle-orm": "^0.39.1",
     "lucide-react": "^0.474.0",
+    "moment": "^2.30.1",
     "mysql2": "^3.12.0",
     "next": "15.1.6",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "sonner": "^1.7.3",
